--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@types/jest": "^29.5.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "n": "^9.1.0",
+    "stable": "^0.1.8"
   }
 }
